--- a/apprsolve/static/apprsolve/cube.css
+++ b/apprsolve/static/apprsolve/cube.css
@@ -1,17 +1,11 @@
-html, main {
-    height: 100%;
+#cubefield {
+    height: 600px;
     overflow: hidden;
     background: radial-gradient(circle, white, rgba(0, 0, 0, 0.5));
     background-color: #2f2f31;
     background-blend-mode: overlay;
 }
-
-
-.credits {
-    width: 100%;
-    top: 90%;
-}
-  
+ 
 .text {
     text-align: center;
     font-family: Helvetica;
