--- a/apprsolve/templates/apprsolve/cube.html
+++ b/apprsolve/templates/apprsolve/cube.html
@@ -7,233 +7,99 @@ Rubik's Cube Solver
 
 {% block body %}
 
-    <div class='container'>
-        <div class='row h-100'>
-            <div class='col-12 my-auto'>
+    <div id='cubefield' class='container'>
+        <div class='row h-100 justify-content-center'>
+            <div class='col-12'>
                 <div class="scene" id="scene">
                     <div class="pivot centered" id="pivot" style="transform: rotateX(-35deg) rotateY(-45deg);">
                         <div class="cube" id="cube">
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
-                            <div class="piece">
-                                <div class="element L"></div>
-                                <div class="element R"></div>
-                                <div class="element U"></div>
-                                <div class="element D"></div>
-                                <div class="element B"></div>
-                                <div class="element F"></div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class='row'>
-            <div class="credits">
-                <div class="text" style="position: initial">html/js adapted from https://codepen.io/Omelyan</div>
+    </div>
+
+    <div class='container'>
+        <div class='row justify-content-center'>
+            <div id='saverestore' class='col-12 text-center'>
+                <button class="btn btn-primary" type="button" onclick='exportCube()'>Save Cube</button>
+                <button class="btn btn-warning" type="button" onclick='importCube()'>Restore Cube</button>
             </div>
         </div>
     </div>
-    
 
+
+    
+<script>
+    
+    // restores a description of a complete cube in this form:
+    // { 'FLU': ['red', 'white', 'blue'], ... }
+    function restoreCube(newCube) {
+   
+        for (let cubieIndex = 0; cubieIndex < 26; cubieIndex++) {
+            const cubeName = allCubies[cubieIndex];
+            console.log('cubename', cubeName);
+            console.log('data', newCube[cubeName]);
+            const cubeColorList = newCube[cubeName];
+            console.log('color list ', cubeColorList);
+            for (let face = 0; face < cubeName.length; face++) {
+                pieces[cubieIndex].querySelector('.element.' + cubeName[face]).firstChild.className = 
+                    'sticker ' + cubeColorList[face];
+            }
+        }
+    }
+
+    // retrieves cube stored in server
+    async function importCube() {
+        const formData = new FormData();
+        formData.append('csrfmiddlewaretoken', '{{ csrf_token }}');
+        const response = await fetch('{% url "restore" %}', {
+            method: 'POST',
+            body: formData
+        });
+        const data = await response.json();
+        console.log('Success77:', data);
+        restoreCube(data);
+    }
+    
+    // exports a description of a complete cube in this form:
+    // { 'FLU': ['red', 'white', 'blue'], ... }
+    function exportCube()
+    {
+        var returnVal = {};
+        const formData = new FormData();
+
+        for (let cubieIndex = 0; cubieIndex < 26; cubieIndex++)
+        {
+            let cubeName = allCubies[cubieIndex];
+            let cubeColorList = [];
+            for (let face = 0; face < cubeName.length; face++)
+            {
+                let color = pieces[cubieIndex].querySelector('.element.' + 
+                    cubeName[face]).firstChild.className.split(' ')[1];
+                cubeColorList.push(color);
+            }
+            returnVal[cubeName] = cubeColorList;
+        }
+        console.log(returnVal);
+        formData.append('cube', JSON.stringify(returnVal));
+        formData.append('csrfmiddlewaretoken', '{{ csrf_token }}');
+        fetch('{% url "info" %}', {
+            method: 'POST',
+            body: formData
+        })
+        .then((response) => response.json())
+        .then((data) => {
+            console.log('Success:', data);
+        })
+        .catch((error) => {
+            console.error('Error:', error);
+        });
+    }
+
+</script>
 
 
 {% endblock %}
