--- a/apprsolve/templates/apprsolve/base.html
+++ b/apprsolve/templates/apprsolve/base.html
@@ -23,15 +23,15 @@
         <nav class="navbar navbar-expand-sm navbar-light">
             <ul class="navbar-nav mr-auto ml-auto">
                 <li class="nav-item">
-                    <a id="home" class="nav-link" href="{% url 'cube' %}">Home</a>
+                    <a id="home" class="nav-link" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a id="settings" class="nav-link" href="{% url 'cube' %}">
+                    <a id="settings" class="nav-link" href="{% url 'index' %}">
                         Settings
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a id="clearboard" class="nav-link" href="{% url 'cube' %}">
+                    <a id="clearboard" class="nav-link" href="{% url 'index' %}">
                         Clear
                     </a>
                 </li>
