--- a/apprsolve/templates/apprsolve/cube.html
+++ b/apprsolve/templates/apprsolve/cube.html
@@ -7,6 +7,7 @@ Rubik's Cube Solver
 
 {% block body %}
 
+
     <div id='cubefield' class='container'>
         <div class='row h-100 justify-content-center'>
             <div class='col-12'>
@@ -19,6 +20,10 @@ Rubik's Cube Solver
                 </div>
             </div>
         </div>
+    </div>
+
+    
+    <div id='alerts'>
     </div>
 
     <div class='container'>
@@ -99,6 +104,24 @@ Rubik's Cube Solver
     
 <script> 
 
+    // display alert text and allow it to close
+    function displayAlerts(message) {
+        let newdiv = document.createElement('div');
+        newdiv.setAttribute('class', 'alert alert-warning alert-dismissible fade show text-center');
+        newdiv.setAttribute('role', 'alert');
+        let newbutt = document.createElement('button');
+        newbutt.setAttribute('type', 'button');
+        newbutt.setAttribute('class', 'close');
+        newbutt.setAttribute('data-bs-dismiss', 'alert');
+        newspan = document.createElement('span');
+        newspan.innerHTML = '&times;'
+        newbutt.appendChild(newspan);
+        newdiv.innerHTML = message + ' ';
+        newdiv.appendChild(newbutt);
+        alertplace = document.querySelector('#alerts');
+        alertplace.appendChild(newdiv);
+    }
+
     // retrieves default cube from server and calls putCubeSpec
     async function loadDefaultCube() {
         const formData = new FormData();
@@ -127,8 +150,9 @@ Rubik's Cube Solver
     
     // calls getCubeSpec and sends data to server
     async function solveCube() {
-        if (!isNormlized()) {
-
+        if (!isNormalized()) {
+            displayAlerts("Please normalize cube before solving");
+            return;
         }
         const cubed = getCubeSpec();
         const formData = new FormData();
