--- a/apprsolve/templates/apprsolve/cube.html
+++ b/apprsolve/templates/apprsolve/cube.html
@@ -49,18 +49,26 @@ Rubik's Cube Solver
                 <button class="btn btn-sm btn-secondary" type="button" onclick='normalizeCube()'>Normalize Cube</button>
                 <button class="btn btn-sm btn-warning" type="button" onclick='randomizeCube()'>Randomize</button>
                 <button class="btn btn-sm btn-success" type="button" onclick='solveCube()'>Solve</button>
+                <button class="btn btn-sm btn-info" type="button" onclick='playCube()'>Play Move List</button>
+                <button class="btn btn-sm btn-primary" type="button" onclick='singleStepCube()'>Single-Step Move List</button>
+                
                 
             </div>
         </div>
 
         <!--move listing -->
         <div class='row justify-content-center'>
-            <div id='moves' class='col-12 text-center'>
+            <div id='moves' class='col-12'>
                 <form id='movelist' action="{% url 'index' %}" method="post">
                     {% csrf_token %}
-                    <div class="form-group">
-                        <input autocomplete="off" class="form-control"
-                            name="movelist" id='mymoves' placeholder="Move List" type="text" value=''>
+                    <div class="form-group row">
+                        <div class='col-12 col-md-2 text-center'>
+                            <label for="mymoves" class="form-label">Move List:</label>
+                        </div>
+                        <div class='col-12 col-md-10 text-left'>
+                            <input autocomplete="off" class="form-control"
+                                name="movelist" id='mymoves' type="text" value=''>
+                        </div>
                     </div>
                 </form>
             </div>
@@ -164,26 +172,10 @@ Rubik's Cube Solver
         });
         const data = await response.json();
         console.log('Success:', data);
-        multiMove(data.solution);
+        // place solution in move list
+        document.querySelector('#mymoves').setAttribute('value', data.solution.join(''));
+        displayAlerts('Solution found');
     }
-
-    async function slowSolveCube() {
-        if (!isNormalized()) {
-            displayAlerts("Please normalize cube before solving");
-            return;
-        }
-        const cubed = getCubeSpec();
-        const formData = new FormData();
-        formData.append('cubed', JSON.stringify(cubed));
-        formData.append('csrfmiddlewaretoken', '{{ csrf_token }}');
-        const response = await fetch('{% url "slowsolve" %}', {
-            method: 'POST',
-            body: formData
-        });
-        const data = await response.json();
-        console.log('Success:', data);
-    }
-
 
     // calls getCubeSpec and sends data to server
     async function saveCube() {
