--- a/apprsolve/static/apprsolve/cube.css
+++ b/apprsolve/static/apprsolve/cube.css
@@ -27,18 +27,20 @@
     width: 100%;
     height: 100%;
     perspective: 1200px;
-    transform-style: preserve-3d;
+    /*transform-style: preserve-3d;*/
 }
 
 .scene > .pivot {
     width: 0;
     height: 0;
     transition: .18s;
+    /*transform-style: inherit;*/
+    transform-style: preserve-3d;
 }
 
 .scene div {
     position: absolute;
-    transform-style: inherit;
+    transform-style: preserve-3d;
 }
 
 .cube {
@@ -56,7 +58,7 @@
     width: 100%;
     height: 100%;
     background: #0A0A0A;
-    outline: 1px solid transparent;
+    outline: 1px solid;
     border: 0.05em solid #0A0A0A;
     border-radius: 10%;
 }
